Fix minor alignment issues in sample view

--- a/ui/src/components/PopInput/style.css
+++ b/ui/src/components/PopInput/style.css
@@ -1,5 +1,5 @@
 
-.popinput-input-label{ 
+.popinput-input-label{
   display: inline-block;
   min-width: 90px;
   margin-right: 1rem;
@@ -8,6 +8,7 @@
 
 .popinput-input-value{
   display: inline-block;
+  white-space: nowrap;
 }
 
 .popinput-busy-buttonbar{
@@ -24,10 +25,9 @@
 
   .popinput-input{
     height: 36px;
-    margin-right: 1m;
     }
-    
-  .visibility-hidden{ 
+
+  .visibility-hidden{
     visibility: hidden;
     display: none;
     }
@@ -36,7 +36,7 @@
  .value-label-enter-success{
   transition: background-color 1000ms ease-out;
   }
-  
+
   .popinput-input-container {
    display: inline;
   }
@@ -47,22 +47,21 @@
     color: #999;
     margin-right: 5px;
     }
-    
+
     .popinput-input-link{
     cursor:pointer;
-    margin-left: 0.5em;
     text-decoration:none;
   }
-    
+
     .popinput-input-link:hover {
     visibility: visible;
     text-decoration:none;
     }
-    
+
     .popinput-input-link:hover > .popinput-input-editicon {
     visibility: visible;
     }
-    
+
     .editable-click {
     cursor: pointer;
     }
